AC_PREREQ(2.59)
AC_INIT([libnmea], [2.0.1], [jon@wroth.org])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_SRCDIR([libnmea.c])
AC_DISABLE_STATIC
LT_INIT
AM_INIT_AUTOMAKE([foreign])

AC_PROG_CC
AC_PROG_LIBTOOL

AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h stdio.h])

AC_C_CONST
AC_TYPE_SIZE_T

AC_CHECK_FUNCS([memmove memset memcpy strchr strtol])
AC_FUNC_MEMCMP

AC_CONFIG_FILES([Makefile tests/Makefile])

AC_OUTPUT
