TESTS = maint scanner parser

check_PROGRAMS = maint scanner parser

maint_SOURCES  = maint.c
maint_CPPFLAGS = -I..
maint_LDFLAGS  = -L../.libs -lnmea

scanner_SOURCES  = scanner.c
scanner_CPPFLAGS = -I..
scanner_LDFLAGS  = -L../.libs -lnmea

parser_SOURCES  = parser.c
parser_CPPFLAGS = -I..
parser_LDFLAGS  = -L../.libs -lnmea

