TESTS = maint scanner parser hex cksum

check_PROGRAMS = maint scanner parser hex cksum

maint_SOURCES  = maint.c
maint_CPPFLAGS = -I..
maint_LDFLAGS  = -L../.libs -lnmea

scanner_SOURCES  = scanner.c
scanner_CPPFLAGS = -I..
scanner_LDFLAGS  = -L../.libs -lnmea

parser_SOURCES  = parser.c
parser_CPPFLAGS = -I..
parser_LDFLAGS  = -L../.libs -lnmea

hex_SOURCES  = hex.c
hex_CPPFLAGS = -I..
hex_LDFLAGS  = -L../.libs -lnmea

cksum_SOURCES  = cksum.c
cksum_CPPFLAGS = -I..
cksum_LDFLAGS  = -L../.libs -lnmea

